examples/work/results/together_nonuni.out
Warning: ground plane node nbin coincident with another node
  at coordinates (-0.0127, 0.0004064, 0) (meters)
Warning: ground plane node nbout coincident with another node
  at coordinates (0.0127, 0.0004064, 0) (meters)
Running FastHenry 3.0wr (29Sep96, mod 010114)
  Date: Wed Jan  8 11:06:21 2014
  Host: frost
Solution technique: ITERATIVE
Matrix vector product method: MULTIPOLE
  Order of expansion: 2
Preconditioner: ON
Error tolerance: 0.001
Reading from file: ../together_nonuni.inp
Title:
* This is together.inp  changed to use nonuni gp discretization

all lengths multiplied by 2.54e-05 to convert to meters
Total number of filaments before multipole refine: 432
Total number of filaments after multipole refine: 438

Multipole Summary
  Expansion order: 2
  Number of partitioning levels: 3
  Total number of filaments: 438
Percentage of multiplies done by multipole: 100%
Scanning graph to find fundamental circuits...
Number of Groundplanes : 1 
Number of filaments:        438
Number of segments:         438
Number of nodes:            872
Number of meshes:           202
          ----from tree:                   2 
          ----from planes: (before holes)  200 
Number of conductors:         2   (rows of matrix in Zc.mat) 
Number of columns:            2   (columns of matrix in Zc.mat) 
Number of real nodes:       870
filling M...
filling R and L...
Total Memory allocated: 1494 kilobytes
Frequency = 0.1
Forming sparse matrix preconditioner..
conductor 0 from node nb1
Calling gmres...
1 2 
conductor 1 from node na1
Calling gmres...
1 2 
Frequency = 1e+19
Forming sparse matrix preconditioner..
conductor 0 from node nb1
Calling gmres...
1 2 3 4 5 6 7 8 9 10 11 
conductor 1 from node na1
Calling gmres...
1 2 3 4 5 6 7 8 9 10 

All impedance matrices dumped to file Zc.mat

Times:  Read geometry   0
        Multipole setup 0.023805
        Scanning graph  1.9e-05
        Form A M and Z  0.000144
        form M'ZM       5e-06
        Form precond    0.002842
        GMRES time      0.026209
   Total:               0.053024
